# file-windows

./: .gitmodules  CMakeLists.txt  file-version.h.in  file.rc  magic-mgc-rc.h
cmake/: SetCompilerLinkerFlags.cmake
